--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,22 +6,30 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
+
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
+
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pipenv wheel
+
       - name: Install dependencies
         run: |
           make install
+
+
+
       - name: Lint with pre-commit
         run: |
           make lint
+
       - name: Test with pytest
         run: |
           make test
