--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,8 @@ jobs:
         with:
           python-version: "3.10"
 
+      - uses: pre-commit/action@v3.0.0
+
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
@@ -23,10 +25,6 @@ jobs:
       - name: Install dependencies
         run: |
           make install
-
-      - name: Lint with pre-commit
-        run: |
-          make lint
 
       - name: Test with pytest
         run: |
